tests/golden/type_errors/for_in_duplicate_item_decl.cd
for x in [1] {
  let x = 2;
}
